# pytorch-sconce

./: .coveragerc  .gitignore  README.md  doc-requirements.txt  requirements.txt  server-setup.md  setup.cfg  test-requirements.txt  tox.ini
docs/: .buildinfo  Makefile  data_feeds.html  data_generator.html  datasets.html  genindex.html  index.html  make.bat  models.html  modules.html  monitors.html  objects.inv  parameter_group.html  py-modindex.html  rate_controllers.html  schedules.html  sconce.data_feeds.html  sconce.data_generators.html  sconce.datasets.html  sconce.html  sconce.models.html  sconce.models.layers.html  sconce.monitors.html  sconce.rate_controllers.html  sconce.schedules.html  sconce.trainers.html  search.html  searchindex.js  trainers.html  transforms.html
docs/_modules/: index.html
docs/_sources/: data_feeds.rst.txt  data_generator.rst.txt  datasets.rst.txt  index.rst.txt  models.rst.txt  monitors.rst.txt  (+10 more)
sconce/: __init__.py  data_generator.py  exceptions.py  parameter_group.py  trainer.py  transforms.py  utils.py
scripts/: release  update-documentation
sphinx/: bs
tests/: base.py  basic_classifier.yaml  multilayer_perceptron.yaml  test_basic_autoencoder.py  test_basic_classifier.py  test_composite_monitor.py  test_data_feeds.py  test_data_generator.py  test_dataframe_journal.py  test_dataframe_monitor.py  test_multilayer_perceptron.py  test_rate_controllers.py  test_ringbuffer_monitor.py  test_schedules.py  test_single_class_image_data_generator.py  test_single_class_image_feed.py  test_trainer.py  test_wide_resnet_image_classifier.py
(+130 files in other folders)
