[metadata]
name = pytorch-sconce
version = 1.3.6
author = David Morton
author_email = davidlmorton@gmail.com
summary = A library for training pytorch models
download_url = https://github.com/davidlmorton/pytorch-sconce/archive/1.3.6.tar.gz
project_urls =
    Documentation = https://davidlmorton.github.io/pytorch-sconce
    Source Code = https://github.com/davidlmorton/pytorch-sconce


[files]
packages =
    sconce
